# codex-lifeboat

./: .gitignore  LICENSE  README.md  codex_lifeboat.py  install.sh  pyproject.toml
codex_lifeboat/: __init__.py  __main__.py  agents.py  artifacts.py  build.py  claude.py  config.py  controller.py  doctor.py  handoff.py  health.py  intelligence.py  launcher.py  maintenance.py  notes.py  operations.py  pins.py  projects.py  recovery.py  safety.py  sessions.py  text.py  tui.py  ui_state.py  views.py
scripts/: build-standalone.sh
tests/: test_purge.py  test_tui_tooltips.py  test_ui_state.py
