[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-lifeboat"
version = "0.2.0"
description = "Recover, summarize, archive, and purge oversized Codex CLI sessions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Robert Winslow" }
]
keywords = [
  "codex",
  "openai",
  "cli",
  "session",
  "recovery",
  "handoff",
  "developer-tools"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: System :: Archiving"
]

[project.scripts]
codex-lifeboat = "codex_lifeboat:main"

[tool.setuptools]
py-modules = ["codex_lifeboat"]
