[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-lifeboat"
version = "0.3.0"
description = "Recover, summarize, archive, and purge oversized AI coding-agent sessions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "textual>=0.80"
]
authors = [
  { name = "Robert Winslow" }
]
keywords = [
  "codex",
  "claude",
  "ai-agent",
  "openai",
  "cli",
  "session",
  "recovery",
  "handoff",
  "developer-tools"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: System :: Archiving"
]

[project.optional-dependencies]
standalone = [
  "pyinstaller>=6.0"
]

[project.scripts]
agent-lifeboat = "codex_lifeboat.tui:main"

[tool.setuptools]
packages = ["codex_lifeboat"]
